snapshots/com/wadpam/openserver/errors/1-SNAPSHOT/errors-1-20121002.045704-1.jar.sha1
cbffa25fd4529e429a6a183ca772cbcffc0046cf